// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Prepare names changes list snapshot 1`] = `
Object {
  "allcash_0": Object {
    "endDate": "01.01.2100 23:59",
    "fromDate": "01.09.2023 00:00",
    "id": "4",
    "name": "AllCash",
  },
  "beda_0": Object {
    "endDate": "08.08.2023 00:00",
    "fromDate": "05.08.2023 00:00",
    "id": "2",
    "name": "beda",
  },
  "borigen_0": Object {
    "endDate": "01.01.2100 23:59",
    "fromDate": "09.04.2023 00:00",
    "id": "1",
    "name": "borigen",
  },
  "callisto1_0": Object {
    "endDate": "18.08.2023 00:00",
    "fromDate": "01.01.1970 00:00",
    "id": "4",
    "name": "callisto1",
  },
  "kanistra_0": Object {
    "endDate": "01.09.2023 00:00",
    "fromDate": "25.08.2023 00:00",
    "id": "4",
    "name": "kanistra",
  },
  "londor_0": Object {
    "endDate": "05.08.2023 01:00",
    "fromDate": "01.01.1970 00:00",
    "id": "3",
    "name": "Londor",
  },
  "londor_1": Object {
    "endDate": "01.01.2100 23:59",
    "fromDate": "07.08.2023 00:00",
    "id": "3",
    "name": "londor",
  },
  "markovnik_0": Object {
    "endDate": "09.04.2023 00:00",
    "fromDate": "01.01.1970 00:00",
    "id": "1",
    "name": "Markovnik",
  },
  "morpex_0": Object {
    "endDate": "15.11.2022 00:00",
    "fromDate": "12.11.2022 00:00",
    "id": "0",
    "name": "morpex",
  },
  "neon_0": Object {
    "endDate": "05.08.2023 00:00",
    "fromDate": "01.01.1970 00:00",
    "id": "2",
    "name": "neon",
  },
  "neon_1": Object {
    "endDate": "07.08.2023 00:00",
    "fromDate": "05.08.2023 01:00",
    "id": "3",
    "name": "neon",
  },
  "neon_2": Object {
    "endDate": "01.01.2100 23:59",
    "fromDate": "08.08.2023 00:00",
    "id": "2",
    "name": "neon",
  },
  "outkast_0": Object {
    "endDate": "25.08.2023 00:00",
    "fromDate": "18.08.2023 00:00",
    "id": "4",
    "name": "Outkast",
  },
  "parker_0": Object {
    "endDate": "12.11.2022 00:00",
    "fromDate": "01.01.1970 00:00",
    "id": "0",
    "name": "Parker",
  },
  "parker_1": Object {
    "endDate": "01.01.2100 23:59",
    "fromDate": "15.11.2022 00:00",
    "id": "0",
    "name": "Parker",
  },
}
`;

exports[`getPlayerId func should work correctly Name change after squad change should be handled correctly 1`] = `
Array [
  Object {
    "averageKills": 10,
    "averagePlayersCount": 5,
    "averageTeamkills": 0,
    "kills": 10,
    "players": Array [
      Object {
        "deaths": Object {
          "byTeamkills": 1,
          "total": 1,
        },
        "id": "1",
        "kdRatio": 10,
        "kills": 10,
        "killsFromVehicle": 2,
        "killsFromVehicleCoef": 0.2,
        "lastSquadPrefix": "[W8]",
        "name": "borigen",
        "teamkills": 0,
        "totalPlayedGames": 1,
        "totalScore": 10,
        "vehicleKills": 0,
      },
      Object {
        "deaths": Object {
          "byTeamkills": 0,
          "total": 0,
        },
        "id": "dummy_1",
        "kdRatio": 0,
        "kills": 0,
        "killsFromVehicle": 0,
        "killsFromVehicleCoef": 0,
        "lastSquadPrefix": "[W8]",
        "name": "Dummy_1",
        "teamkills": 0,
        "totalPlayedGames": 1,
        "totalScore": 0,
        "vehicleKills": 0,
      },
      Object {
        "deaths": Object {
          "byTeamkills": 0,
          "total": 0,
        },
        "id": "dummy_2",
        "kdRatio": 0,
        "kills": 0,
        "killsFromVehicle": 0,
        "killsFromVehicleCoef": 0,
        "lastSquadPrefix": "[W8]",
        "name": "Dummy_2",
        "teamkills": 0,
        "totalPlayedGames": 1,
        "totalScore": 0,
        "vehicleKills": 0,
      },
      Object {
        "deaths": Object {
          "byTeamkills": 0,
          "total": 0,
        },
        "id": "dummy_3",
        "kdRatio": 0,
        "kills": 0,
        "killsFromVehicle": 0,
        "killsFromVehicleCoef": 0,
        "lastSquadPrefix": "[W8]",
        "name": "Dummy_3",
        "teamkills": 0,
        "totalPlayedGames": 1,
        "totalScore": 0,
        "vehicleKills": 0,
      },
      Object {
        "deaths": Object {
          "byTeamkills": 0,
          "total": 0,
        },
        "id": "dummy_4",
        "kdRatio": 0,
        "kills": 0,
        "killsFromVehicle": 0,
        "killsFromVehicleCoef": 0,
        "lastSquadPrefix": "[W8]",
        "name": "Dummy_4",
        "teamkills": 0,
        "totalPlayedGames": 1,
        "totalScore": 0,
        "vehicleKills": 0,
      },
    ],
    "prefix": "[W8]",
    "score": 2,
    "teamkills": 0,
  },
  Object {
    "averageKills": 5,
    "averagePlayersCount": 5,
    "averageTeamkills": 0,
    "kills": 5,
    "players": Array [
      Object {
        "deaths": Object {
          "byTeamkills": 0,
          "total": 1,
        },
        "id": "1",
        "kdRatio": 5,
        "kills": 5,
        "killsFromVehicle": 0,
        "killsFromVehicleCoef": 0,
        "lastSquadPrefix": "[A]",
        "name": "Markovnik",
        "teamkills": 0,
        "totalPlayedGames": 1,
        "totalScore": 5,
        "vehicleKills": 0,
      },
      Object {
        "deaths": Object {
          "byTeamkills": 0,
          "total": 0,
        },
        "id": "dummy_1",
        "kdRatio": 0,
        "kills": 0,
        "killsFromVehicle": 0,
        "killsFromVehicleCoef": 0,
        "lastSquadPrefix": "[A]",
        "name": "Dummy_1",
        "teamkills": 0,
        "totalPlayedGames": 1,
        "totalScore": 0,
        "vehicleKills": 0,
      },
      Object {
        "deaths": Object {
          "byTeamkills": 0,
          "total": 0,
        },
        "id": "dummy_2",
        "kdRatio": 0,
        "kills": 0,
        "killsFromVehicle": 0,
        "killsFromVehicleCoef": 0,
        "lastSquadPrefix": "[A]",
        "name": "Dummy_2",
        "teamkills": 0,
        "totalPlayedGames": 1,
        "totalScore": 0,
        "vehicleKills": 0,
      },
      Object {
        "deaths": Object {
          "byTeamkills": 0,
          "total": 0,
        },
        "id": "dummy_3",
        "kdRatio": 0,
        "kills": 0,
        "killsFromVehicle": 0,
        "killsFromVehicleCoef": 0,
        "lastSquadPrefix": "[A]",
        "name": "Dummy_3",
        "teamkills": 0,
        "totalPlayedGames": 1,
        "totalScore": 0,
        "vehicleKills": 0,
      },
      Object {
        "deaths": Object {
          "byTeamkills": 0,
          "total": 0,
        },
        "id": "dummy_4",
        "kdRatio": 0,
        "kills": 0,
        "killsFromVehicle": 0,
        "killsFromVehicleCoef": 0,
        "lastSquadPrefix": "[A]",
        "name": "Dummy_4",
        "teamkills": 0,
        "totalPlayedGames": 1,
        "totalScore": 0,
        "vehicleKills": 0,
      },
    ],
    "prefix": "[A]",
    "score": 1,
    "teamkills": 0,
  },
]
`;

exports[`getPlayerId func should work correctly Name change and then change back to the same name should work correctly 1`] = `
Array [
  Object {
    "averageKills": 2.33,
    "averagePlayersCount": 5.33,
    "averageTeamkills": 0,
    "kills": 7,
    "players": Array [
      Object {
        "deaths": Object {
          "byTeamkills": 1,
          "total": 2,
        },
        "id": "0",
        "kdRatio": 7,
        "kills": 7,
        "killsFromVehicle": 4,
        "killsFromVehicleCoef": 0.57,
        "lastSquadPrefix": "[W8]",
        "name": "Parker",
        "teamkills": 0,
        "totalPlayedGames": 3,
        "totalScore": 3.5,
        "vehicleKills": 0,
      },
      Object {
        "deaths": Object {
          "byTeamkills": 0,
          "total": 0,
        },
        "id": "dummy_1",
        "kdRatio": 0,
        "kills": 0,
        "killsFromVehicle": 0,
        "killsFromVehicleCoef": 0,
        "lastSquadPrefix": "[W8]",
        "name": "Dummy_1",
        "teamkills": 0,
        "totalPlayedGames": 3,
        "totalScore": 0,
        "vehicleKills": 0,
      },
      Object {
        "deaths": Object {
          "byTeamkills": 0,
          "total": 0,
        },
        "id": "dummy_2",
        "kdRatio": 0,
        "kills": 0,
        "killsFromVehicle": 0,
        "killsFromVehicleCoef": 0,
        "lastSquadPrefix": "[W8]",
        "name": "Dummy_2",
        "teamkills": 0,
        "totalPlayedGames": 3,
        "totalScore": 0,
        "vehicleKills": 0,
      },
      Object {
        "deaths": Object {
          "byTeamkills": 0,
          "total": 0,
        },
        "id": "dummy_3",
        "kdRatio": 0,
        "kills": 0,
        "killsFromVehicle": 0,
        "killsFromVehicleCoef": 0,
        "lastSquadPrefix": "[W8]",
        "name": "Dummy_3",
        "teamkills": 0,
        "totalPlayedGames": 3,
        "totalScore": 0,
        "vehicleKills": 0,
      },
      Object {
        "deaths": Object {
          "byTeamkills": 0,
          "total": 0,
        },
        "id": "dummy_4",
        "kdRatio": 0,
        "kills": 0,
        "killsFromVehicle": 0,
        "killsFromVehicleCoef": 0,
        "lastSquadPrefix": "[W8]",
        "name": "Dummy_4",
        "teamkills": 0,
        "totalPlayedGames": 3,
        "totalScore": 0,
        "vehicleKills": 0,
      },
      Object {
        "deaths": Object {
          "byTeamkills": 0,
          "total": 0,
        },
        "id": "stolfo",
        "kdRatio": 0,
        "kills": 0,
        "killsFromVehicle": 0,
        "killsFromVehicleCoef": 0,
        "lastSquadPrefix": "[W8]",
        "name": "stolfo",
        "teamkills": 0,
        "totalPlayedGames": 1,
        "totalScore": 0,
        "vehicleKills": 0,
      },
    ],
    "prefix": "[W8]",
    "score": 0.44,
    "teamkills": 0,
  },
]
`;

exports[`getPlayerId func should work correctly Name change collision after name change and before change back should be handled correctly 1`] = `
Array [
  Object {
    "averageKills": 5,
    "averagePlayersCount": 6,
    "averageTeamkills": 0,
    "kills": 15,
    "players": Array [
      Object {
        "deaths": Object {
          "byTeamkills": 1,
          "total": 2,
        },
        "id": "3",
        "kdRatio": 10,
        "kills": 10,
        "killsFromVehicle": 0,
        "killsFromVehicleCoef": 0,
        "lastSquadPrefix": "[W8]",
        "name": "Londor",
        "teamkills": 0,
        "totalPlayedGames": 3,
        "totalScore": 5,
        "vehicleKills": 0,
      },
      Object {
        "deaths": Object {
          "byTeamkills": 0,
          "total": 2,
        },
        "id": "2",
        "kdRatio": 2.5,
        "kills": 5,
        "killsFromVehicle": 0,
        "killsFromVehicleCoef": 0,
        "lastSquadPrefix": "[W8]",
        "name": "neon",
        "teamkills": 0,
        "totalPlayedGames": 3,
        "totalScore": 1.67,
        "vehicleKills": 0,
      },
      Object {
        "deaths": Object {
          "byTeamkills": 0,
          "total": 0,
        },
        "id": "dummy_1",
        "kdRatio": 0,
        "kills": 0,
        "killsFromVehicle": 0,
        "killsFromVehicleCoef": 0,
        "lastSquadPrefix": "[W8]",
        "name": "Dummy_1",
        "teamkills": 0,
        "totalPlayedGames": 3,
        "totalScore": 0,
        "vehicleKills": 0,
      },
      Object {
        "deaths": Object {
          "byTeamkills": 0,
          "total": 0,
        },
        "id": "dummy_2",
        "kdRatio": 0,
        "kills": 0,
        "killsFromVehicle": 0,
        "killsFromVehicleCoef": 0,
        "lastSquadPrefix": "[W8]",
        "name": "Dummy_2",
        "teamkills": 0,
        "totalPlayedGames": 3,
        "totalScore": 0,
        "vehicleKills": 0,
      },
      Object {
        "deaths": Object {
          "byTeamkills": 0,
          "total": 0,
        },
        "id": "dummy_3",
        "kdRatio": 0,
        "kills": 0,
        "killsFromVehicle": 0,
        "killsFromVehicleCoef": 0,
        "lastSquadPrefix": "[W8]",
        "name": "Dummy_3",
        "teamkills": 0,
        "totalPlayedGames": 3,
        "totalScore": 0,
        "vehicleKills": 0,
      },
      Object {
        "deaths": Object {
          "byTeamkills": 0,
          "total": 0,
        },
        "id": "dummy_4",
        "kdRatio": 0,
        "kills": 0,
        "killsFromVehicle": 0,
        "killsFromVehicleCoef": 0,
        "lastSquadPrefix": "[W8]",
        "name": "Dummy_4",
        "teamkills": 0,
        "totalPlayedGames": 3,
        "totalScore": 0,
        "vehicleKills": 0,
      },
    ],
    "prefix": "[W8]",
    "score": 0.83,
    "teamkills": 0,
  },
]
`;

exports[`getPlayerId func should work correctly Name change should work correctly 1`] = `
Array [
  Object {
    "averageKills": 5,
    "averagePlayersCount": 5,
    "averageTeamkills": 0,
    "kills": 10,
    "players": Array [
      Object {
        "deaths": Object {
          "byTeamkills": 1,
          "total": 2,
        },
        "id": "1",
        "kdRatio": 10,
        "kills": 10,
        "killsFromVehicle": 4,
        "killsFromVehicleCoef": 0.4,
        "lastSquadPrefix": "[A]",
        "name": "borigen",
        "teamkills": 0,
        "totalPlayedGames": 2,
        "totalScore": 10,
        "vehicleKills": 0,
      },
      Object {
        "deaths": Object {
          "byTeamkills": 0,
          "total": 0,
        },
        "id": "dummy_1",
        "kdRatio": 0,
        "kills": 0,
        "killsFromVehicle": 0,
        "killsFromVehicleCoef": 0,
        "lastSquadPrefix": "[A]",
        "name": "Dummy_1",
        "teamkills": 0,
        "totalPlayedGames": 2,
        "totalScore": 0,
        "vehicleKills": 0,
      },
      Object {
        "deaths": Object {
          "byTeamkills": 0,
          "total": 0,
        },
        "id": "dummy_2",
        "kdRatio": 0,
        "kills": 0,
        "killsFromVehicle": 0,
        "killsFromVehicleCoef": 0,
        "lastSquadPrefix": "[A]",
        "name": "Dummy_2",
        "teamkills": 0,
        "totalPlayedGames": 2,
        "totalScore": 0,
        "vehicleKills": 0,
      },
      Object {
        "deaths": Object {
          "byTeamkills": 0,
          "total": 0,
        },
        "id": "dummy_3",
        "kdRatio": 0,
        "kills": 0,
        "killsFromVehicle": 0,
        "killsFromVehicleCoef": 0,
        "lastSquadPrefix": "[A]",
        "name": "Dummy_3",
        "teamkills": 0,
        "totalPlayedGames": 2,
        "totalScore": 0,
        "vehicleKills": 0,
      },
      Object {
        "deaths": Object {
          "byTeamkills": 0,
          "total": 0,
        },
        "id": "dummy_4",
        "kdRatio": 0,
        "kills": 0,
        "killsFromVehicle": 0,
        "killsFromVehicleCoef": 0,
        "lastSquadPrefix": "[A]",
        "name": "Dummy_4",
        "teamkills": 0,
        "totalPlayedGames": 2,
        "totalScore": 0,
        "vehicleKills": 0,
      },
    ],
    "prefix": "[A]",
    "score": 1,
    "teamkills": 0,
  },
]
`;

exports[`getPlayerId func should work correctly Name changes sequence should work correctly 1`] = `
Array [
  Object {
    "averageKills": 2.5,
    "averagePlayersCount": 5,
    "averageTeamkills": 0,
    "kills": 10,
    "players": Array [
      Object {
        "deaths": Object {
          "byTeamkills": 2,
          "total": 3,
        },
        "id": "4",
        "kdRatio": 10,
        "kills": 10,
        "killsFromVehicle": 5,
        "killsFromVehicleCoef": 0.5,
        "lastSquadPrefix": "[W8]",
        "name": "AllCash",
        "teamkills": 0,
        "totalPlayedGames": 4,
        "totalScore": 5,
        "vehicleKills": 0,
      },
      Object {
        "deaths": Object {
          "byTeamkills": 0,
          "total": 0,
        },
        "id": "dummy_1",
        "kdRatio": 0,
        "kills": 0,
        "killsFromVehicle": 0,
        "killsFromVehicleCoef": 0,
        "lastSquadPrefix": "[W8]",
        "name": "Dummy_1",
        "teamkills": 0,
        "totalPlayedGames": 4,
        "totalScore": 0,
        "vehicleKills": 0,
      },
      Object {
        "deaths": Object {
          "byTeamkills": 0,
          "total": 0,
        },
        "id": "dummy_2",
        "kdRatio": 0,
        "kills": 0,
        "killsFromVehicle": 0,
        "killsFromVehicleCoef": 0,
        "lastSquadPrefix": "[W8]",
        "name": "Dummy_2",
        "teamkills": 0,
        "totalPlayedGames": 4,
        "totalScore": 0,
        "vehicleKills": 0,
      },
      Object {
        "deaths": Object {
          "byTeamkills": 0,
          "total": 0,
        },
        "id": "dummy_3",
        "kdRatio": 0,
        "kills": 0,
        "killsFromVehicle": 0,
        "killsFromVehicleCoef": 0,
        "lastSquadPrefix": "[W8]",
        "name": "Dummy_3",
        "teamkills": 0,
        "totalPlayedGames": 4,
        "totalScore": 0,
        "vehicleKills": 0,
      },
      Object {
        "deaths": Object {
          "byTeamkills": 0,
          "total": 0,
        },
        "id": "dummy_4",
        "kdRatio": 0,
        "kills": 0,
        "killsFromVehicle": 0,
        "killsFromVehicleCoef": 0,
        "lastSquadPrefix": "[W8]",
        "name": "Dummy_4",
        "teamkills": 0,
        "totalPlayedGames": 4,
        "totalScore": 0,
        "vehicleKills": 0,
      },
    ],
    "prefix": "[W8]",
    "score": 0.5,
    "teamkills": 0,
  },
]
`;
